[package]
name = "lily"
version = "0.1.0"
authors = ["Sergio Tortosa <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "^0.4" # Load configuration files from this program and skills
serde_yaml = "^0.8" # Join serde and Yaml for loading conf and skills
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
maplit = "^1.0" # Literals for hasmaps, mostly used for the config of Rasa
anyhow = "^1.0" # For error handling overall in the app
thiserror = "^1.0" # For error handling in parts that can be made their own crate
regex = "^1.3" # To parse configuration
ctrlc = "^3.1" # To catch ctrl-c in all platforms and exit the program
# Some async deps
tokio = {version="^0.2", features = ["rt-core", "macros", "sync"]}
async-trait = "^0.1"
rumqttc = "^0.1"
rmp-serde = "^0.14"
uuid = {version = "^0.8.1", features=["v4", "serde"]}

#vad = "0.1.5" # Note: Had to be disabled because syntex_syntax was causing problems
pocketsphinx = "^0.6.0" # Offline Stt
deepspeech = {version = "^0.8", optional = true} # More correct and better (also slower) Stt
opus = "^0.2" # Still used to propagate errors

snips-nlu-lib = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "master" } # NLU
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.67.1"  } # NLU-related things
serde_json ="^1.0" # Used in nlu output and to get text from IBM's Wattson
pyo3 = "^0.12" # Load code from packages
lazy_static = "^1.4" # We use this for the path were the data is stored

ttspico = "^0.1" # Main Tts (only for some languages)
espeak-ng-sys = {git = "https://github.com/sheosi/espeak-ng-sys", optional = true} # Auxiliar Tts (speaks any language)
libc = "^0.2" # Required to interface with espeak-ng-sys
rodio = {git = "https://github.com/RustAudio/rodio"} # Playback library

log = "^0.4" # Common API for logging so we can change backend easily

#Cloud-based
google_translate_tts = {version = "0.1.2", optional = true} # Format TTS URLs
reqwest = {version = "^0.10", features = ["default-tls", "json"]} # HTTP client
url = "^2.1"
base64 = "^0.12" # For sending data to the online TTS and STT
tungstenite = "^0.11" # Web sockets for online STT

lily_common = {path = "common"}

# Localization
unic-langid = {version="^0.9", features = ["macros"]} # For parsing Unicode Language Identifiers
locale_config = "*" # Interact with the system locale, the * is suggestednby it's author
fluent-langneg = "^0.13" # Language negotiation

[features]
default = []
extra_langs_tts = ["espeak-ng-sys"]
google_tts = ["google_translate_tts"]
deepspeech_stt = ["deepspeech"]
devel_rasa_nlu= []
unused_stt_batcher= []

[workspace]
members = ["client", "common"]