[package]
name = "base_client"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^0.3", features = ["rt", "macros", "sync"]}
rmp-serde = "^0.14"
rsnowboy = {git = "https://github.com/sheosi/rsnowboy"} # Hotword detector
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
lily_common = {path = "../common"}
anyhow = "^1.0" # For error handling overall in the app
log = "^0.4" # Common API for logging so we can change backend easilyp
lazy_static = "^1.4" # 
#rumqttc = "^0.2"
rumqttc = {git="https://github.com/bytebeamio/rumqtt"}
serde_yaml = "^0.8"