[package]
name = "lily-satellite"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Voice-based satellite (client) for Lily"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.34", features = ["rt", "macros", "sync", "io-util"]}
rmp-serde = "^1.1"
rsnowboy = {git = "https://github.com/sheosi/rsnowboy"} # Hotword detector
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
lily_common = {path = "../common"}
client-components = {path = "../client-components"}
anyhow = "^1.0" # For error handling overall in the app
log = "^0.4" # Common API for logging so we can change backend easily
rumqttc = "^0.22"
serde_yaml = "^0.9"
uuid = {version = "^1.6.1", features=["v4", "serde"]}
ogg-opus = "^0.1"
termion = "^1.5"

[package.metadata.deb]
maintainer = "Sergio Tortosa Benedito <sertorbe@gmail.com>"
copyright = "2021, Sergio Tortosa Benedito <sertorbe@gmail.com>"
extended-description = """\
Lily client."""
section = "utility"
priority = "optional"
maintainer-scripts = "packaging/debian"

assets = [
    ["target/release/lily-satellite", "usr/bin/", "755"],
    ["resources/hotword/common.res", "usr/share/lily-satellite/hotword/", "644"],
    ["resources/hotword/LICENSE", "usr/share/lily-satellite/hotword/", "644"],
    ["resources/hotword/lily.pmdl", "usr/share/lily-satellite/hotword/", "644"]
]

[package.metadata.deb.systemd-units]
unit-scripts = "packaging/systemd"
enable = false
start = false
