[package]
name = "lily_common"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnowboy = {git = "https://github.com/sheosi/rsnowboy", optional = true} # Hotword detector
webrtc-vad = {version = "^0.4", optional = true}
cpal = {version = "^0.13", optional = true} # For recording (future substitute of sphinxad)
ringbuf = {version = "^0.2", optional = true}# Send what is recorded from the consumer to the producer
ogg = {version="^0.8", optional = true} # Send to web services audio and to save into disk
magnum-opus = {version="^0.3", optional = true} # The format we use in ogg
byteorder = {version="^1.3", optional = true} # Used for Rust opus implementation 
thiserror = "^1.0" # For error handling in parts that can be made their own crate

log = "^0.4" # Common API for logging so we can change backend easily
rodio = {version = "^0.13", optional = true, default-features =false, features = ["flac", "vorbis", "wav"]} # Playback library
lazy_static = "^1.4" # We use this for the path were the data is stored
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
syslog = "^5.0" # Linux log interface
url = "^2.1"

rumqttc = "^0.5"
anyhow = "^1.0" # For error handling overall in the app
tokio = {version = "^1.5", features = ["time"], optional = true}
rand = "^0.8" # Needs to be hold of for compatibility with cbindgen
serial_test = "^0.5"
dirs = "^3.0"

[features]
default = ["client", "snowboy","rust_opus"]
client = ["cpal", "ringbuf", "rodio", "tokio"]
snowboy = ["rsnowboy"]
webrtc_vad = ["webrtc-vad"]
rust_opus = ["ogg", "magnum-opus", "byteorder"] # Half-done, encoder seems in a pretty good state but decoder needs work
unused = []