[package]
name = "lily_common"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnowboy = {git = "https://github.com/sheosi/rsnowboy", optional = true} # Hotword detector
webrtc-vad = {version = "^0.4", optional = true}
cpal = {version = "^0.13", optional = true} # For recording (future substitute of sphinxad)
ringbuf = {version = "^0.2", optional = true}# Send what is recorded from the consumer to the producer
ogg-opus = "^0.1"
thiserror = "^1.0" # For error handling in parts that can be made their own crate

log = "^0.4" # Common API for logging so we can change backend easily
rodio = {version = "^0.14", optional = true, default-features =false, features = ["flac", "vorbis", "wav"]} # Playback library
lazy_static = "^1.4" # We use this for the path were the data is stored
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
syslog = "^5.0" # Linux log interface
url = "^2.2"

rumqttc = "^0.8"
anyhow = "^1.0" # For error handling overall in the app
tokio = {version = "^1.9", features = ["time"], optional = true}
rand = "^0.8" # Needs to be hold of for compatibility with cbindgen
dirs = "^4.0"

[features]
default = ["client", "snowboy"]
client = ["cpal", "ringbuf", "rodio", "tokio"]
snowboy = ["rsnowboy"]
webrtc_vad = ["webrtc-vad"]
unused = []