[package]
name = "pkg_util"
version = "0.1.0"
authors = ["sheosi <sertorbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
bytes = "0.5"
clap = "^2.3"
reqwest = {version = "^0.10", features = ["default-tls", "json"]}
serde = {version = "^1.0", features = ["derive"]} # Serialization framework (used by serde_yaml and serde_json)
thiserror = "^1.0" # For error handling in parts that can be made their own crate
tokio = {version="^0.3", features = ["macros", "rt", "sync", "time"]}
zip = "0.5"